sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:7: error: not found: value v
     while (a-ecart>0 && getValeur(a-ecart)<v){
                                            ^